<package>
  <name>rosruby</name>
  <version>0.5.4</version>
  <description>This package is a Ruby client library for ROS, the Robot Operating System.</description>
  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rosruby</url>
  <url type="bugtracker">http://github.com/OTL/rosruby</url>

  <author>Takashi Ogura</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genrb</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>ruby</build_depend>
  <build_depend>rake</build_depend>

  <run_depend>genrb</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>rosmsg</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>roslang</run_depend>
  <run_depend>rosgraph_msgs</run_depend>

  <export>
  </export>
</package>
